# ember

./: .gitignore  INSTALL.md  README.md  RELEASE.md  package-lock.json  package.json
.claude/: launch.json
.github/workflows/: release.yml
docs/: local-code-signing.md
docs/superpowers/plans/: 2026-06-18-ember-m1-foundation-auth.md  2026-06-18-ember-m6-smart-inbox-scorer.md  2026-06-19-ember-m10-calendar.md  2026-06-19-ember-m11-search.md  2026-06-19-ember-m12-folder-views.md  2026-06-19-ember-m7-actions.md  (+19 more)
scripts/: create-signing-cert.sh  extract-ember.py
src/: App.css  App.tsx  main.tsx  theme.tsx
src-tauri/: .env.example  Cargo.toml  Entitlements.plist  Info.dev.plist  Info.plist  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/cmake/: portable-arm64.cmake
src-tauri/icons/: icon.icns
src-tauri/native/: syscapture.m
src-tauri/src/: audio.rs  blackhole.rs  capture.rs  commands.rs  decode.rs  error.rs  html.rs  lib.rs  main.rs  mime.rs  model.rs  ollama.rs  scorer.rs  syscapture.rs  transcribe.rs  transcript.rs  whisper.rs
src-tauri/src/auth/: loopback.rs  mod.rs  tokens.rs
src-tauri/src/calendar/: mod.rs  types.rs
src-tauri/src/db/: mod.rs
src-tauri/src/gmail/: mod.rs  types.rs
src-tauri/src/people/: mod.rs
src-tauri/src/scheduling/: mod.rs
src-tauri/src/zoom/: client.rs  mod.rs
src-tauri/tests/: calendar_test.rs  gmail_test.rs  ollama_test.rs  people_test.rs  transcribe_e2e.rs  whisper_test.rs  zoom_test.rs
src/components/: AccountSwitcher.tsx  CalendarView.tsx  ComposeModal.tsx  CredentialsSetup.tsx  EventModal.tsx  FindTimePanel.tsx  FolderRail.tsx  GuestField.tsx  Header.tsx  IconRail.tsx  LabelChips.tsx  LabelPicker.tsx  MessageItem.tsx  MessageList.tsx  NotesModal.tsx  ReadingPane.tsx  RichText.tsx  SettingsModal.tsx  Sidebar.tsx  SnoozeMenu.tsx  SnoozedList.tsx  SplitView.tsx  UndoToast.tsx  WeekGrid.tsx
src/lib/: api.ts  attachments.ts  calendar.ts  compose.ts  folders.ts  labels.ts  listnav.ts  mock.ts  notes.ts  notify.ts  snooze.ts  streams.ts  time.ts
src/styles/: app.css  theme.css
(+24 files in other folders)
