[package]
name = "ember"
version = "0.1.0"
description = "Ember — a local Gmail client"
edition = "2021"

[lib]
name = "ember_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
oauth2 = "5"
keyring = { version = "3", features = ["apple-native"] }
url = "2"
open = "5"
thiserror = "2"
dotenvy = "0.15"
rusqlite = { version = "0.40.1", features = ["bundled"] }
futures = "0.3.32"
base64 = "0.22.1"
ammonia = "4.1.2"

[dev-dependencies]
base64 = "0.22.1"
wiremock = "0.6"
