[package]
name = "ember"
version = "0.1.0"
description = "Ember — a local Gmail client"
edition = "2021"

[lib]
name = "ember_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
oauth2 = "5"
keyring = { version = "3", features = ["apple-native"] }
url = "2"
open = "5"
thiserror = "2"
dotenvy = "0.15"
rusqlite = { version = "0.40.1", features = ["bundled"] }
futures = "0.3.32"
base64 = "0.22.1"
ammonia = "4.1.2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
cpal = "0.18.1"
# 🦀 In-process Whisper STT (compiles whisper.cpp with Metal at build time → no sidecar/server).
whisper-rs = { version = "0.14", features = ["metal"] }
# 🦀 Pure-Rust audio decoding for the file-import path (wav/mp3/aac/alac/flac/ogg + mp4/mov demux).
symphonia = { version = "0.5", features = ["mp3", "aac", "alac", "isomp4", "flac", "ogg", "vorbis", "wav", "pcm"] }

[dev-dependencies]
base64 = "0.22.1"
wiremock = "0.6"
